# VoxAurora

./: .gitignore  Cargo.toml  LICENSE  README.MD  build.rs  config.json
benches/: text_cleanup_bench.rs
configs/: base_config.json  rust_fr.json
src/: actions.rs  audio.rs  bert.rs  config.rs  dawg_loader.rs  lib.rs  logger.rs  main.rs  wakeword.rs  whisper_integration.rs
